--- a/frontend/src/components/navBar/NavBar.css
+++ b/frontend/src/components/navBar/NavBar.css
@@ -54,6 +54,7 @@
     border: 1px solid lightgray;
     margin-left: 10px;
     background-color: inherit;
+    color: black;
 }
 
 @keyframes openSearch {
